@@ -32,7 +32,7 @@ public:
   virtual ~Source_file ();
 
   char const *to_str0 () const;
-  virtual String error_string (char const *pos_str0) const;
+  virtual String quote_input (char const *pos_str0) const;
   std::istream *get_istream ();
   bool contains (char const *pos_str0) const;
   int length () const;
@@ -52,8 +52,7 @@ public:
 public:
   Slice line_slice (char const *pos_str0) const;
   String line_string (char const *pos_str0) const;
-  int get_column (char const *pos_str0) const;
-  int get_char_of_line (char const *pos_str0) const;
+  void get_counts (char const *pos_str0, int*, int*, int*) const;
 
   /*
     JUNKME.
