@@ -1,3 +1,14 @@
+2005-06-08  Han-Wen Nienhuys  <hanwen@xs4all.nl>
+
+	* ttftool/util.c (syserror): use errno for better error reporting.
+
+	* lily/source-file.cc (get_counts): new function. Calc column,
+	line and char count in one go.
+
+	* lily/binary-source-file.cc (quote_input): rename to quote_input
+
+	* lily/input.cc (set): new function.
+
 2005-06-08  Jan Nieuwenhuizen  <janneke@gnu.org>
 
 	* lily/main.cc (prepend_env_path): Bugfix: Check directory
